Исправил пару моментов для прохождения тестов