@@ -4,13 +4,12 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.ResponseEntity;
-import stats.dto.HitDto;
-import stats.dto.StatsDto;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 @SpringBootTest
 public class StatsClientTest {
@@ -19,18 +18,26 @@ public class StatsClientTest {
     private StatsClient statsClient;
 
     @Test
-    public void testSaveHit() {
-        HitDto hitDto = new HitDto("app", "/uri", "192.168.0.1", LocalDateTime.now());
-        ResponseEntity<HitDto> response = statsClient.saveHit(hitDto);
-        assertEquals(201, response.getStatusCodeValue());
-    }
-
-    @Test
     public void testGetStats() {
         LocalDateTime start = LocalDateTime.now().minusDays(1);
         LocalDateTime end = LocalDateTime.now();
-        List<String> uris = List.of("/uri");
-        ResponseEntity<List<StatsDto>> response = (ResponseEntity<List<StatsDto>>) statsClient.getStats(start, end, uris, false);
-        assertEquals(200, response.getStatusCodeValue());
+        List<String> uris = Arrays.asList("/uri1", "/uri2");
+        boolean unique = false;
+
+        ResponseEntity<Object> response = statsClient.getStats(start, end, uris, unique);
+
+        assertNotNull(response);
+    }
+
+    @Test
+    public void testSaveHit() {
+        String app = "app1";
+        String uri = "/uri1";
+        String ip = "192.168.1.1";
+        LocalDateTime timestamp = LocalDateTime.now();
+
+        ResponseEntity<Object> response = statsClient.saveHit(app, uri, ip, timestamp);
+
+        assertNotNull(response);
     }
 }
